# minibiblio

./: .env.example  .env.production  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.fastapi  Dockerfile.nextjs  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  install.bat  logs.bat  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  start.bat  stop.bat  tailwind.config.js  update.bat
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  plan_docker_github_packages.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
alembic/: env.py
alembic/versions/: 22c0e88d5964_add_app_settings_table.py  24c1ec790252_create_loans_table.py  3a708b28b709_add_address_birthdate_to_patrons.py  8e0543dd7f8a_create_patrons_table.py  a55cdc127c38_merge_patron_updates_and_user_table.py  d5f9316aa91f_create_catalog_items_table.py  f1a2b3c4d5e6_add_users_table.py
api/: config.py  index.py
api/db/: __init__.py  database.py  models.py
api/models/: __init__.py  catalog.py  import_models.py  loan.py  patron.py  reports.py  settings.py  user.py
api/routers/: __init__.py  auth.py  catalog.py  import_router.py  loans.py  patrons.py  reports.py  settings.py
api/scripts/: create_admin.py  seed_data.py
app/: layout.tsx
app/[locale]/: layout.tsx
app/admin/: layout.tsx  nav-item.tsx  page.tsx  user.tsx
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py  schemas.py  security.py  users.py
backend/app/routes/: auth.py
backend/minibiblio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
components/ui/: date-picker.tsx  dialog.tsx  dropdown-menu.tsx  sheet.tsx
docs/plans/: 2025-12-07-docker-github-packages.md  verification-checklist.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: LoginForm.tsx  Navigation.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css
lib/: auth.ts
messages/: de.json  en.json
openspec/: project.md
scripts/: backup.bat  restore.bat  setup-auto-backup.bat
src/: main.py
tests/: test_audit_service.py  test_book_service.py  test_database_manager.py  test_integration.py  test_loan_audit_integration.py  test_loan_service.py  test_reader_service.py
(+63 files in other folders)
