[project]
name = "minibiblio-api"
version = "0.1.0"
description = "FastAPI backend for minibiblio"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi==0.100.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.4",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]==0.23.2",
]
